Finished blog project, readme update

--- a/03 March/0321 Udemy/0330 CSS Project Blog/blog.html
+++ b/03 March/0321 Udemy/0330 CSS Project Blog/blog.html
@@ -3,6 +3,7 @@
 <head>
     <title>my Gallery</title>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&amp;subset=korean" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
