Font awesome and grid practicing

--- a/03 March/0321 Udemy/0402 Bootstrap grid/gridSystem.html
+++ b/03 March/0321 Udemy/0402 Bootstrap grid/gridSystem.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <title>About me</title>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <style type="text/css">
 .pink {
-    background-color: cadetblue;
+    background-color: pink;
     border: 1px solid peru;
     font:xx-large;
 }
@@ -17,27 +18,42 @@
 </head>
 <body>
 
-
-<!-- Objectives
+<!-- 
+Objectives
 1. Understand Purpose of the Grid System
 2. Understand the 4 different sizes
 3. Write nested grids
-=============================== -->
+ -->
+
 <div class="containter">
     <div class="row">
-        <div class="col-lg-4 pink">4</div>
-        <div class="col-lg-4 pink">4</div>
-        <div class="col-lg-4 pink">4</div>
-    </diV>
-    <div class="row">
-            <div class="col-lg-2 orange">4</div>
-            <div class="col-lg-2 orange">4</div>
-            <div class="col-lg-2 orange">4</div>
-            <div class="col-lg-2 orange">4</div>
-            <div class="col-lg-2 orange">4</div>
-            <div class="col-lg-2 orange">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink"><i class="fas fa-camera-retro fa-10x"></i></div>
+        <div class="col-lg-1 col-md-2 pink">
+                <div class="row">
+                    <div class="col-lg-6 orange"><i class="fas fa-camera-retro fa-10x"></i></div>
+                    <div class="col-lg-6 orange"><i class="fas fa-camera-retro fa-10x"></i></div>
+                </div>
+        </div> 
+        <div class="col-lg-1 col-md-2 pink">4</div>  
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>
+        <div class="col-lg-1 col-md-2 pink">4</div>      
+    </div>
+    <!-- <div class="row">
+            <div class="col-lg-1 col-md-3 orange">4</div>
+            <div class="col-lg-1 col-md-3 orange">4</div>
+            <div class="col-lg-1 col-md-3 orange">4</div>
+            <div class="col-lg-1 col-md-3 orange">4</div>
+            <div class="col-lg-1 col-md-3 orange">4</div>
+            <div class="col-lg-1 col-md-3 orange">4</div>
 
-        </diV>
+        </div> -->
 </div>
 
 
